# api_bot

./: Cargo.toml  TODO.md
migrations/: 20240320_initial_schema.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs
src/api/: coingecko.rs  mod.rs
src/auth/: admin.rs  api_key.rs  argon2.rs  encryption.rs  jwt.rs  middleware.rs  mod.rs
src/db/: api_credentials.rs  api_keys.rs  asset_pairs.rs  init.rs  mod.rs  notifications.rs  personal_data.rs  price_alerts.rs  strategies.rs  users.rs
src/endpoints/: admin.rs  api_credentials.rs  api_keys.rs  asset_pairs.rs  auth.rs  mod.rs  notifications.rs  personal_data.rs  price_alerts.rs  strategies.rs  tests.rs  users.rs
src/migrations/: mod.rs
src/models/: api_credentials.rs  api_keys.rs  asset_pairs.rs  mod.rs  notifications.rs  personal_data.rs  price_alerts.rs  users.rs
src/notifications/: mod.rs  models.rs  queue.rs  webhook.rs  websocket.rs
src/utils/: crypto.rs  mod.rs  serde.rs  user_crypto.rs
