[package]
name = "my_rust_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monitor"
path = "bin/monitor.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hyper = "0.14"
tower = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
