[package]
name = "my_rust_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my_rust_api"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros", "ws"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "chrono", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"
bigdecimal = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hyper = "0.14"
tower = "0.4"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10.3"
base64 = "0.21.7"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
futures = "0.3.30"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
rust_decimal = { version = "1.34", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.34"
lazy_static = "1.4"

[dev-dependencies]
